# -- Build System -----------------------------------------------------------------
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# -- Project Metadata -------------------------------------------------------------
[project]
name = "PH-units"
version = "1.5.29"
description = "Tools for working with common Passive House unit types"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "PH-Tools", email = "phtools@bldgtyp.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["black", "coverage", "pytest", "pytest-cov"]

# -- Package Discovery ------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["ph_units*"]
exclude = ["tests*"]

# -- Bump My Version ---------------------------------------------------------------
[tool.bumpversion]
current_version = "1.5.29"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "bump: version {current_version} -> {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# -- Pytest ------------------------------------------------------------------------
[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

# -- Coverage ----------------------------------------------------------------------
[tool.coverage.run]
command_line = "-m pytest . tests"
source = ["ph_units"]
branch = true
cover_pylib = false
omit = ["*.venv/*", "*.venv_mbair/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.coverage.html]
directory = "_coverage_html"
